--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -523,6 +523,14 @@
 									}
 
 							}
+
+							> .content {
+								height: auto;
+
+								> .intro-text {
+									padding-top: inherit;
+								}
+							}
 						}
 
 					// Last.
